package chadchat.api;

public class InvalidPassword extends Exception {
}