@startuml

title __CHADCHAT's Class Diagram__\n

  namespace chadchat.api {
    class chadchat.api.ChadChat {
    }
  }
  

  namespace chadchat.api {
    interface chadchat.api.ChatRepository {
    }
  }
  

  namespace chadchat.api {
    class chadchat.api.InvalidPassword {
    }
  }
  

  namespace chadchat.domain {
    class chadchat.domain.Message {
    }
  }
  

  namespace chadchat.domain {
    interface chadchat.domain.MessageFactory {
    }
  }
  

  namespace chadchat.domain {
    interface chadchat.domain.MessageRepository {
    }
  }
  

  namespace chadchat.domain {
    class chadchat.domain.User {
    }
  }
  

  namespace chadchat.domain {
    class chadchat.domain.UserExists {
    }
  }
  

  namespace chadchat.domain {
    interface chadchat.domain.UserFactory {
    }
  }
  

  namespace chadchat.domain {
    interface chadchat.domain.UserRepository {
    }
  }
  

  namespace chadchat.entries {
    class chadchat.entries.Migrate {
    }
  }
  

  namespace chadchat.entries {
    class chadchat.entries.Server {
    }
  }
  

  namespace chadchat.infrastructure {
    class chadchat.infrastructure.Database {
    }
  }
  

  namespace chadchat.ui {
    class chadchat.ui.Protocol {
    }
  }
  

  chadchat.api.ChadChat o-- chadchat.api.ChatRepository : users
  chadchat.infrastructure.Database .up.|> chadchat.api.ChatRepository
  chadchat.ui.Protocol .up.|> chadchat.api.ChadChat.MessageNotifier
  chadchat.ui.Protocol o-- chadchat.api.ChadChat : chadchat


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
